gluecodium/src/test/resources/smoke/errors/output/lime/smoke/Errors.lime
package smoke
class Errors {
    typealias BOOM = Internal
    enum InternalErrorCode {
        ERROR_NONE,
        ERROR_FATAL
    }
    @Cpp(ExternalType = "foo/Bar.h", ExternalName = "::fire::SomeEnum")
    enum ExternalErrors {
        NONE,
        BOOM,
        BUST
    }
    exception Internal(InternalErrorCode)
    exception External(ExternalErrors)
    static fun methodWithErrors() throws Internal
    static fun methodWithExternalErrors() throws External
    static fun methodWithErrorsAndReturnValue(): String throws Internal
    static fun methodWithAliasedError() throws BOOM
}
